--- a/configure.in
+++ b/configure.in
@@ -78,7 +78,7 @@ dnl
 dnl Project Sub directories
 dnl
 
-PROJ_SUBDIRS="src/vscp/drivers/level2/wire1/linux src/vscp/drivers/level1/logger/linux src/vscp/drivers/level1/can232/linux src/vscp/drivers/level1/xap/linux src/vscp/drivers/level1/socketcan/linux src/vscp/drivers/level2/logger/linux src/vscp/drivers/level2/lmsensors/linux src/vscp/drivers/level2/socketcan/linux src/vscp/drivers/level2/mqtt/linux src/vscp/drivers/level2/tcpdrv/linux src/vscp/drivers/level2/rawethernet/linux src/vscp/linuxvscpl1 src/vscp/helperlib/linux src/vscp/daemon/linux src/vscp/mkpasswd src/vscp/uvscpd src/vscp/vscpcmd"  
+PROJ_SUBDIRS="src/vscp/drivers/level1/can4vscp/linux src/vscp/drivers/level2/wire1/linux src/vscp/drivers/level1/logger/linux src/vscp/drivers/level1/can232/linux src/vscp/drivers/level1/xap/linux src/vscp/drivers/level1/socketcan/linux src/vscp/drivers/level2/logger/linux src/vscp/drivers/level2/lmsensors/linux src/vscp/drivers/level2/socketcan/linux src/vscp/drivers/level2/mqtt/linux src/vscp/drivers/level2/tcpdrv/linux src/vscp/drivers/level2/rawethernet/linux src/vscp/linuxvscpl1 src/vscp/helperlib/linux src/vscp/daemon/linux src/vscp/mkpasswd src/vscp/uvscpd src/vscp/vscpcmd"  
 AC_SUBST(PROJ_SUBDIRS)
 PROJ_SUBDIRS_GUI="src/vscp/vscpworks"
 AC_SUBST(PROJ_SUBDIRS_GUI)
@@ -194,6 +194,7 @@ AC_CONFIG_FILES([Makefile
          src/vscp/drivers/level1/can232/linux/Makefile
          src/vscp/drivers/level1/xap/linux/Makefile
          src/vscp/drivers/level1/socketcan/linux/Makefile
+         src/vscp/drivers/level1/can4vscp/linux/Makefile
          src/vscp/drivers/level2/logger/linux/Makefile
          src/vscp/drivers/level2/lmsensors/linux/Makefile
 	 src/vscp/drivers/level2/mqtt/linux/Makefile
