--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ src/vscp/drivers/level2/wire1/linux/a.out
 src/vscp/drivers/level2/wire1/linux/test
 vscp-software_1.0.1-1_amd64.deb
 /config_examples/web/testws/google_line_simple - Copy.html
+src/vscp/drivers/level1/can4vscp/linux/test
