--- a/src/vscp/drivers/level2/sim/linux/Makefile.in
+++ b/src/vscp/drivers/level2/sim/linux/Makefile.in
@@ -35,7 +35,7 @@ DLLPREFIX = lib
 WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCPTCPIP_OBJECTS = vscptcpiplink.o\
+VSCPTCPIP_OBJECTS = ../common/simulation.o\
 	../../../../common/vscpremotetcpif.o\
 	../../../../common/vscphelper.o\
 	../../../../common/guid.o\
@@ -43,7 +43,7 @@ VSCPTCPIP_OBJECTS = vscptcpiplink.o\
 	../../../../../common/crc8.o\
 	../../../../../common/fossa.o\
 
-PROJOBJS =  vscptcpiplink.o\
+PROJOBJS =  ../common/simulation.o\
 	../../../../common/vscpremotetcpif.o\
 	../../../../common/vscphelper.o\
 	../../../../common/guid.o\
@@ -60,10 +60,10 @@ ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
 
 ### Targets: ###
 
-all: vscpl2drv_tcpiplink.so test
+all: vscpl2drv_sim.so test
 
 install: all
-	$(INSTALL_PROGRAM) vscpl2drv_tcpiplink.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl2drv_sim.so $(libdir)
 
 uninstall: 
 
@@ -76,7 +76,7 @@ clean:
 	rm -f ../../../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
-	rm -f vscpl2drv_tcpiplink.so
+	rm -f vscpl2drv_sim.so
 	rm -f test
 
 distclean: clean
@@ -88,7 +88,7 @@ test:  test.o $(PROJOBJS)
 
 # Build the Linux DL
 %.so: %.o $(VSCPTCPIP_OBJECTS)
-	$(CXX) -o $@ vscpl2drv_tcpiplink.o $(VSCPTCPIP_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
+	$(CXX) -o $@ vscpl2drv_sim.o $(VSCPTCPIP_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
 
 $(ALWAYS_BUILD):  .FORCE
 
