--- a/src/vscp/drivers/level2/sim/linux/Makefile.in
+++ b/src/vscp/drivers/level2/sim/linux/Makefile.in
@@ -10,9 +10,9 @@ top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
-CXXFLAGS = @CXXFLAGS@ -fPIC -I../../../../common -I../../../../../common
+CXXFLAGS = @CXXFLAGS@ -fPIC -I. -I../../../../common -I../../../../../common
 CPPFLAGS = -I include  @CPPFLAGS@ -D__LINUX__ -DUSE_FOSSA -fPIC -I../../../../common -I../../../../../common
-CFLAGS = -D__LINUX__ -fPIC -I../../../../common -I../../../../../common
+CFLAGS = -D__LINUX__ -fPIC -I. -I../../../../common -I../../../../../common
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 DLFLAGS = -g -shared -fPIC
