--- a/src/vscp/drivers/level1/usb2can/usb2can/usb2can.vcxproj
+++ b/src/vscp/drivers/level1/usb2can/usb2can/usb2can.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{0B81E79F-41D9-4E90-8823-76F9F94FAE4F}</ProjectGuid>
     <RootNamespace>usb2can</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <ProjectName>vscpl1_usb2can</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -41,13 +42,13 @@
     <_ProjectFileVersion>12.0.30501.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
-    <IntDir>$(Configuration)\</IntDir>
+    <OutDir>.\Debug\</OutDir>
+    <IntDir>.\Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
-    <IntDir>$(Configuration)\</IntDir>
+    <OutDir>.\Release\</OutDir>
+    <IntDir>.\Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -68,6 +69,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
+      <OutputFile>.\Debug\vscpl1_usb2candrv.dll</OutputFile>
+      <ImportLibrary>.\Debug\vscpl1_usb2candrv.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
       <Command />
@@ -93,6 +96,8 @@
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
+      <ImportLibrary>.\Release\vscpl1_usb2candrv.lib</ImportLibrary>
+      <OutputFile>.\Release\vscpl1_usb2candrv.dll</OutputFile>
     </Link>
     <PostBuildEvent>
       <Message>lib /def:win32\usb2can.def /OUT:$(TargetDir)$(TargetName).lib</Message>
