--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,4 @@ src/vscp/drivers/level1/can4vscp/linux/test
 /src/vscp/helperlib/windows/*.aps
 src/vscp/drivers/level2/sim/linux/nbproject/
 src/vscp/drivers/level2/sim/linux/test
+/src/vscp/daemon/win32/service/vscpsrv.sdf
